crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__expr_negation.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | where not status > 400\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (NOT ("status" > ?))
---
params:
  0: 400
