crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__expr_not_equal.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | where count != 1\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("count" != ?)
---
params:
  0: 1
