crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__field_filter_with_float_coercion.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"score:3.14\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "score" = ?
---
params:
  0: 3.14
