crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__field_filter_with_numeric_coercion.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"status:200\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "status" = ?
---
params:
  0: 200
