crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_double_stats.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | stats count() by host | stats count() as num_hosts\")"
---
WITH _s0 AS (
  SELECT "host", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
  GROUP BY "host"
)
SELECT COUNT(*) AS "num_hosts"
FROM "_s0"
