crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_full_pipeline.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx last:2h | stats count() by host | where count > 10 | sort -count | limit 5\")"
---
WITH _s0 AS (
  SELECT "host", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet')
  WHERE "service" = ? AND CAST("timestamp" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '2 hours'
  GROUP BY "host"
)
SELECT *
FROM "_s0"
WHERE ("count" > ?)
ORDER BY "count" DESC
LIMIT 5
---
params:
  0: 'nginx'
  1: 10
