crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_let_chained.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let x = duration * 1000 | let y = x + 100\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
), _s1 AS (
  SELECT * EXCLUDE ("x"), (("duration" * ?)) AS "x"
  FROM "_s0"
)
SELECT * EXCLUDE ("y"), (("x" + ?)) AS "y"
FROM "_s1"
---
params:
  0: 1000
  1: 100
