crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_let_then_where.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let duration_ms = duration * 1000 | where duration_ms > 500\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet')
), _s1 AS (
  SELECT *, (("duration" * ?)) AS "duration_ms"
  FROM "_s0"
)
SELECT *
FROM "_s1"
WHERE ("duration_ms" > ?)
---
params:
  0: 1000
  1: 500
