crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_search_then_dedup.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | dedup host\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet')
  WHERE "service" = ?
), _s1 AS (
  SELECT *, ROW_NUMBER() OVER (PARTITION BY "host" ORDER BY CAST("timestamp" AS TIMESTAMP) DESC) AS "_rn"
  FROM "_s0"
)
SELECT * EXCLUDE ("_rn")
FROM "_s1"
WHERE "_rn" = 1
---
params:
  0: 'nginx'
